[metadata]
name = pdffill-ismasanz
version = 0.0.1
author = Ismael Sanz
author_email = isanz@uji.es
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ismasanz/pdffill
project_urls =
    Bug Tracker = https://github.com/ismasanz/pdffill/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    PyPDF2 >= 1.26
    reportlab >= 3.6
    PyYAML >= 5.4

[options.packages.find]
where = src